finished home and team page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,9 +2,240 @@
 title: Le Wagon Middleman boilerplate
 ---
 
-<div class="welcome text-center padded">
-  <h1>Welcome to Middleman</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p>
-</div>
+<!-- Your banner code -->
+    <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('images/background.jpg');">
+      <div class="banner-content text-center">
+        <h1>Some Stuff</h1>
+        <p>Very cool stuff, useful and smart</p>
+        <form action="" class="form-inline">
+          <input type="text" placeholder="checkin" class="form-control input-lg">
+          <input type="text" placeholder="checkout" class="form-control input-lg">
+          <select class="form-control input-lg">
+            <option value="1">1 person</option>
+            <option value="2">2 people</option>
+            <option value="3">3 people</option>
+          </select>
+          <input type="submit" value="Search" class="btn btn-primary btn-lg">
+        </form>
+      </div>
+    </div>
+
+    <!-- Your features code -->
+    <div class="feats">
+      <div class="text-center">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6 col-lg-3">
+              <img src="images/globe.png" alt="">
+              <h2>Discover the world</h2>
+              <p>The earth is your new home.</p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-lg-3">
+              <img src="images/dollar.png" alt="">
+              <h2>Pay online</h2>
+              <p>No cash issues anymore.</p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-lg-3">
+              <img src="images/beer.png" alt="">
+              <h2>Meet people</h2>
+              <p>Discover new culture and lifestyle.</p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-lg-3">
+              <img src="images/heart.png" alt="">
+              <h2>Share and love</h2>
+              <p>Join a community you will love.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Your cards code -->
+
+
+
+
+
+
+    <div class="wrapper-grey">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <h2 class="text-center">Your next trip</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-4">
+            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-brussels.jpeg');">
+              <div class="card-category">Paris</div>
+              <div class="card-description">
+                <h2>Anne's home</h2>
+                <p>Charming room with patio</p>
+              </div>
+              <img class="card-user avatar" src="images/anne.jpg">
+              <a class="card-link" href="#" ></a>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-paris.jpg');">
+                <div class="card-category">Paris</div>
+                <div class="card-description">
+                  <h2>Seb's home</h2>
+                  <p>Nice place</p>
+                </div>
+                <img class="card-user avatar" src="images/seb.jpg">
+                <a class="card-link" href="#" ></a>
+              </div>
+            </div>
+          <div class="col-xs-12 col-sm-4">
+            <!-- insert <div class="card"> -->
+            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/card-london.jpeg');">
+              <div class="card-category">Paris</div>
+              <div class="card-description">
+                <h2>Romain's home</h2>
+                <p>Rainy but homey</p>
+              </div>
+              <img class="card-user avatar" src="images/romain.jpg">
+              <a class="card-link" href="#" ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Your newsletter code -->
+    <div class="newsletter text-center">
+      <h2>Get news from us</h2>
+      <p>Leave us your mail and get news from us</p>
+      <form action="#" class="form-inline">
+        <input class="form-control" type="email" id="your-email" placeholder="bob@gmail.com">
+        <input class="btn btn-primary" type="submit" value="Subscribe">
+      </form>
+    </div>
+
+    <!-- Your map code -->
+    <div id="map" style="width: 100%; height: 400px;"></div>
+
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+    <script type="text/javascript">
+    var myLatlng = new google.maps.LatLng(50.8473592,4.3567875,17);
+
+    var myOptions = {
+      zoom: 16,
+      center: myLatlng,
+      scrollwheel: false,
+      mapTypeId: google.maps.MapTypeId.ROADMAP,
+      styles: [{
+        "featureType": "administrative",
+        "stylers": [
+            {
+                "visibility": "off"
+            }
+        ]
+    },
+    {
+        "featureType": "poi",
+        "stylers": [
+            {
+                "visibility": "simplified"
+            }
+        ]
+    },
+    {
+        "featureType": "road",
+        "elementType": "labels",
+        "stylers": [
+            {
+                "visibility": "simplified"
+            }
+        ]
+    },
+    {
+        "featureType": "water",
+        "stylers": [
+            {
+                "visibility": "simplified"
+            }
+        ]
+    },
+    {
+        "featureType": "transit",
+        "stylers": [
+            {
+                "visibility": "simplified"
+            }
+        ]
+    },
+    {
+        "featureType": "landscape",
+        "stylers": [
+            {
+                "visibility": "simplified"
+            }
+        ]
+    },
+    {
+        "featureType": "road.highway",
+        "stylers": [
+            {
+                "visibility": "off"
+            }
+        ]
+    },
+    {
+        "featureType": "road.local",
+        "stylers": [
+            {
+                "visibility": "on"
+            }
+        ]
+    },
+    {
+        "featureType": "road.highway",
+        "elementType": "geometry",
+        "stylers": [
+            {
+                "visibility": "on"
+            }
+        ]
+    },
+    {
+        "featureType": "water",
+        "stylers": [
+            {
+                "color": "#84afa3"
+            },
+            {
+                "lightness": 52
+            }
+        ]
+    },
+    {
+        "stylers": [
+            {
+                "saturation": -17
+            },
+            {
+                "gamma": 0.36
+            }
+        ]
+    },
+    {
+        "featureType": "transit.line",
+        "elementType": "geometry",
+        "stylers": [
+            {
+                "color": "#3f518c"
+            }
+        ]
+    }] // TODO: replace [] by array from https://snazzymaps.com/
+    };
+
+    var map = new google.maps.Map(document.getElementById('map'), myOptions);
+    var marker = new google.maps.Marker({
+      position: myLatlng,
+      map: map,
+      title: "You are here!"
+    });
+    </script>
