--- a/source/stylesheets/layout/_utilities.css.scss
+++ b/source/stylesheets/layout/_utilities.css.scss
@@ -6,7 +6,7 @@
 
 // Paddings
 .padded {
-  padding-top: 5em;
+  padding-top: 6em;
   padding-bottom: 5em;
 }
 
@@ -15,7 +15,7 @@
   background: #4a4a4a;
 }
 .bg-email {
-  background: #aeaeae;
+  text-decoration: none;
 }
 .bg-twitter {
   background: #00a3e1;
