--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -9,7 +9,7 @@
     <% end %>
   </ul>
   <div class="text-center">
-    <a href="mailto:samuelyret@gmail.com" class="bg-email">
+    <a href="mailto:email@mail.com" class="bg-email">
       <i class="fa fa-envelope-o" aria-hidden="true"></i>
       samuelyret@gmail.com
     </a>
