--- a/source/stylesheets/layout/_footer.css.scss
+++ b/source/stylesheets/layout/_footer.css.scss
@@ -1,7 +1,7 @@
 /* Footer design */
 .footer {
-  background-color: #333333;
-  color: #CCCCCC;
+  background-color: $gray-darker;
+  color: $gray-lighter;
   padding-top: 60px;
   width:100%;
   height:150px;
@@ -30,12 +30,12 @@
 }
 
 .footer a{
-  color:#CCCCCC;
+  color:$gray-lighter;
   text-decoration: none;
 }
 
 .footer a:hover{
-  color:#FFFF00;
+  color:$yellow;
   text-decoration: none;
 }
 
