--- a/source/stylesheets/layout/_utilities.css.scss
+++ b/source/stylesheets/layout/_utilities.css.scss
@@ -12,14 +12,14 @@
 
 // Backgrounds
 .bg-text {
-  background: #4a4a4a;
+  background: $gray-light;
 }
 .bg-email {
   text-decoration: none;
 }
 .bg-twitter {
-  background: #00a3e1;
+  background: $blue;
 }
 .bg-facebook {
-  background: #3b5998;
+  background: $blue;
 }
